@@ -1,3 +1,12 @@
+2010-01-28  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	* testsuite/21_strings/basic_string/element_access/char/21674.cc:
+	Extend xfail to all systems.
+	* testsuite/21_strings/basic_string/element_access/wchar_T/21674.cc:
+	Likewise.
+	* testsuite/26_numerics/headers/cmath/c99_classification_macros_c.cc:
+	Extend xfail to darwin10 systems.
+
 2010-01-27  Benjamin Kosnik  <bkoz@redhat.com>
 
 	PR c++/42346
